--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ org.gradle.daemon=false
 
 # Base info
 mc_version=1.16.5
-forge_version=36.2.0
-mcp_channel=snapshot
-mcp_mappings=20210309-1.16.5
+forge_version=36.2.17
+mcp_channel=official
+mcp_mappings=1.16.5
 
 # Version
-version=1.0.1
+version=1.0.2
