--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -15,3 +15,9 @@ KAZE NO YOU NI
 TSUKIMIHARA WO
 PADORU PADORU
 '''
+[[dependencies.padoru]]
+modId="minecraft"
+mandatory=true
+versionRange="[1.17.1,1.18)"
+ordering="NONE"
+side="BOTH"
