--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,10 @@ forge_version=43.2.0
 mcp_channel=official
 mcp_mappings=1.19.2
 
+#Publishing
+mod_name=Padoru
+curseforge_id=350657
+modrinth_id=bWqO9KRL
+
 # Version
 version=1.0.3
