--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,10 @@ forge_version=44.0.30
 mcp_channel=official
 mcp_mappings=1.19.3
 
+#Publishing
+mod_name=Padoru
+curseforge_id=350657
+modrinth_id=bWqO9KRL
+
 # Version
 version=1.1.0
