--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,13 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Base info
-mc_version=1.19.4
-forge_version=45.0.43
-mcp_channel=official
-mcp_mappings=1.19.4
+mc_version=1.20.1
+forge_version=47.0.19
+mapping_channel=official
+mapping_version=1.20.1
+mod_group=com.mrbysco.padoru
+mod_id=padoru
+mod_archive_name=Padoru
 
 #Publishing
 mod_name=Padoru
@@ -15,4 +18,7 @@ curseforge_id=350657
 modrinth_id=bWqO9KRL
 
 # Version
-version=1.2.0
+version=2.0.0
+
+# Dependencies
+jei_version=15.1.0.19
