--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[46,)"
+loaderVersion="[1,)"
 issueTrackerURL="https://github.com/mrbysco/padoru/issues"
 license="MIT"
 
@@ -19,6 +19,12 @@ PADORU PADORU
 [[dependencies.padoru]]
 modId="minecraft"
 mandatory=true
-versionRange="[1.20,1.21)"
+versionRange="[1.20.2,1.21)"
+ordering="NONE"
+side="BOTH"
+[[dependencies.padoru]]
+modId="neoforge"
+mandatory=true
+versionRange="[20.2.64-beta,)"
 ordering="NONE"
 side="BOTH"
