--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 # Base info
 mc_version=1.20.2
-neo_version=20.2.64-beta
+neo_version=20.2.86
 mapping_channel=official
 mapping_version=1.20.2
 mod_group=com.mrbysco.padoru
